<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bill" />

            <EditText
                android:id="@+id/amountOfBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentageTip" />

            <EditText
                android:id="@+id/tipPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peopleNum" />

            <EditText
                android:id="@+id/numberOfPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <!--<SeekBar
                android:id="@+id/numberOfPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculate-btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Calculate" />

            <Button
                android:id="@+id/reset-btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tipTotal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tipAmountTextView"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalBill" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalToPayTextView"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView22"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perPerson" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalPerPersonTextView"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>

        <Button
            android:id="@+id/exit-btn"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="Exit" />
    </LinearLayout>

</ScrollView>